Phase 3: replace cached thread pool with virtual thread executor in PathWatcherService